[package]
name = "clint-rust"
version = "0.1.0"
authors = ["Clint Olson <coandco@gmail.com>"]
edition = "2018"

[[bin]]
name = "day01"
path = "src/bin/advent2020_day01.rs"

[[bin]]
name = "day02"
path = "src/bin/advent2020_day02.rs"

[[bin]]
name = "day03"
path = "src/bin/advent2020_day03.rs"

[[bin]]
name = "day04"
path = "src/bin/advent2020_day04.rs"

[[bin]]
name = "day05"
path = "src/bin/advent2020_day05.rs"

[[bin]]
name = "day06"
path = "src/bin/advent2020_day06.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
num-cmp = "0.1.0"
parse-display = "0.5.0"
scan_fmt = "0.2.6"
hex = "0.4"
phf = { version = "0.9", features = ["macros"] }
