[package]
name = "clint-rust"
version = "0.1.0"
authors = ["Clint Olson <coandco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
num-cmp = "0.1.0"
parse-display = "0.5.0"
scan_fmt = "0.2.6"
hex = "0.4"
phf = { version = "0.9", features = ["macros"] }
lazy_static = "1.4.0"
regex = "1.5.4"
aoc-main = { version = "0.3.0", features = ["bench"] }
